@@ -13,7 +13,7 @@ AST::NodeT Snot = AST::symbolFromStr("not");
 AST::NodeT Scircumflex = AST::symbolFromStr("^");
 AST::NodeT SfloatP = AST::symbolFromStr("float?");
 AST::NodeT SsymbolFromStr = AST::symbolFromStr("symbolFromStr");
-AST::NodeT Sdivrem = AST::symbolFromStr("divrem");
+AST::NodeT Sdivmod0 = AST::symbolFromStr("divmod0");
 AST::NodeT Sin = AST::symbolFromStr("in");
 AST::NodeT Sapply = AST::symbolFromStr("apply");
 AST::NodeT Sgreater = AST::symbolFromStr(">");
