@@ -5,7 +5,7 @@ let Error := requireModule "Error" in
 import [nil? cons? head tail (:)] from Builtins in 
 import [raiseMissingSymbolError dispatch ($) compose flip rec rem] from Composition in 
 import [if else elif (||) (&&) (#t) (#f) not] from Logic in 
-import [(<=) (>=) (=) (/=) (+) (-) (*) divide max] from Arithmetic in 
+import [(<=) (>=) (=) (/=) (+) (-) (*) (/) div0 max ceil] from Arithmetic in 
 let nil := [] in 
 let list? := \a nil? a || cons? a in 
 let foldl := \f rec \foldl \v \list 
@@ -64,7 +64,7 @@ let mergeSortBy := \lessEqualComparator
 		if (nil? list || nil? (tail list)) 
 			list 
 		$else 
-			let halfCount := divide (length list) 2 in 
+			let halfCount := div0 (length list) 2 in 
 			let leftHalf := take halfCount list in 
 			let rightHalf := drop halfCount list in 
 			merge (sort leftHalf) (sort rightHalf)
@@ -96,9 +96,23 @@ let rangeLL := \step \end
 in 
 let range1 := \beginning \end rangeLL 1 end beginning in 
 let range := \beginning \end \step rangeLL step end beginning in 
+let frangeLL := \step \end \beginning
+	let n := ceil (end - beginning)/step in 
+	let range := rec\range \i
+		if (i >= n) 
+			[] 
+		$else 
+			(beginning + i⋅step):(range (i + 1))
+	in 
+	range 0
+in 
 let frange := \beginning \end \step 
 	rem "a version of (range) more suited to floating-point values: Errors don't accumulate that much on every step."
-	let count := divide (end - beginning) step in 
+	frangeLL step end beginning
+in 
+let frange2 := \beginning \end \step 
+	rem "a version of (range) more suited to floating-point values: Errors don't accumulate that much on every step."
+	let count := ceil ((end - beginning)/step) in 
 	map (\i i*step) (range 0 count 1)
 in 
 let zipBy := \zipper rec \zipBy \l1 \l2 
@@ -115,5 +129,5 @@ let sum := \list foldr (+) 0 list in
 let product := \list foldr (*) 1 list in 
 let anyTrue? := \list foldr (||) #f list in 
 let allTrue? := \list foldr (&&) #t list in 
-Composition.dispatch (#exports[nil nil? cons? list? (:) (++) map merge mergeBy mergeSort mergeSortBy extremum drop foldl foldr filter length head tail reverse enumerate range range1 take takeWhile zip transpose zipBy sum product anyTrue? allTrue? frange])
+Composition.dispatch (#exports[nil nil? cons? list? (:) (++) map merge mergeBy mergeSort mergeSortBy extremum drop foldl foldr filter length head tail reverse enumerate range range1 take takeWhile zip transpose zipBy sum product anyTrue? allTrue? frange frangeLL])
 raiseMissingSymbolError
